total used amound per person implementation
refactor: made total used amound feature a query
