# api/app/src/main/java/com/godutch/app/group/api/GetGroupPaymentSummaryOutputPort.java
@@ -1,0 +1,11 @@
+package com.godutch.app.group.api;
+
+import java.util.Map;
+
+import com.godutch.common.Amount;
+import com.godutch.group.MemberId;
+
+public interface GetGroupPaymentSummaryOutputPort {
+    void result(Amount totalPaidAmount, Map<MemberId, Amount> totalUsedAmounts);
+    void failure(RuntimeException cause);
+}
